add library endpoint
