# docs/swagger.json
@@ -29,7 +29,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.LoginRequest"
+                            "$ref": "#/definitions/dto.LoginRequest"
                         }
                     }
                 ],
@@ -129,7 +129,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.ChangePasswordRequest"
+                            "$ref": "#/definitions/dto.ChangePasswordDTO"
                         }
                     }
                 ],
@@ -311,7 +311,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.CreateClientRequest"
+                            "$ref": "#/definitions/dto.CreateClientRequest"
                         }
                     }
                 ],
@@ -393,7 +393,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.CreateTechnicianRequest"
+                            "$ref": "#/definitions/dto.CreateTechnicianDTO"
                         }
                     }
                 ],
@@ -409,7 +409,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.Technician"
+                                            "$ref": "#/definitions/dto.TechnicianDTO"
                                         }
                                     }
                                 }
@@ -616,7 +616,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.Technician"
+                                            "$ref": "#/definitions/dto.TechnicianDTO"
                                         }
                                     }
                                 }
@@ -668,7 +668,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/models.Technician"
+                                                "$ref": "#/definitions/dto.TechnicianDTO"
                                             }
                                         }
                                     }
@@ -706,7 +706,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.UpdateClientRequest"
+                            "$ref": "#/definitions/dto.UpdateClientRequest"
                         }
                     }
                 ],
@@ -813,7 +813,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.UpdateTechnicianRequest"
+                            "$ref": "#/definitions/dto.UpdateTechnicianDTO"
                         }
                     }
                 ],
@@ -829,7 +829,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.Technician"
+                                            "$ref": "#/definitions/dto.TechnicianDTO"
                                         }
                                     }
                                 }
@@ -929,12 +929,9 @@
             "type": "object",
             "properties": {
                 "role": {
-                    "description": "Rol del usuario autenticado",
-                    "type": "string",
-                    "example": "TECHNICIAN"
+                    "type": "string"
                 },
                 "token": {
-                    "description": "JWT generado",
                     "type": "string",
                     "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
                 }
@@ -952,65 +949,33 @@
                 }
             }
         },
-        "models.ChangePasswordRequest": {
+        "dto.ChangePasswordDTO": {
             "type": "object",
+            "required": [
+                "NewPassword",
+                "UserId"
+            ],
             "properties": {
                 "NewPassword": {
                     "type": "string",
                     "example": "newSecret123"
                 },
-                "Username": {
+                "UserId": {
                     "type": "string",
                     "example": "carlos.r"
                 }
             }
         },
-        "models.Client": {
-            "type": "object",
-            "properties": {
-                "Address": {
-                    "type": "string",
-                    "example": "Calle 123 #45-67"
-                },
-                "Document": {
-                    "type": "string",
-                    "example": "1002003001"
-                },
-                "DocumentType": {
-                    "type": "string",
-                    "example": "CC"
-                },
-                "Email": {
-                    "type": "string",
-                    "example": "juan.perez@example.com"
-                },
-                "ID": {
-                    "type": "string",
-                    "example": "550e8400-e29b-41d4-a716-446655440000"
-                },
-                "Name": {
-                    "type": "string",
-                    "example": "Juan"
-                },
-                "PhoneNumber": {
-                    "type": "string",
-                    "example": "3001234567"
-                },
-                "Surname": {
-                    "type": "string",
-                    "example": "Pérez"
-                }
-            }
-        },
-        "models.CreateClientRequest": {
+        "dto.CreateClientRequest": {
             "type": "object",
             "required": [
                 "Address",
                 "Document",
-                "DocumentType",
+                "DocumentTypeId",
                 "Email",
                 "Name",
                 "PhoneNumber",
+                "RoleId",
                 "Surname"
             ],
             "properties": {
@@ -1022,7 +987,7 @@
                     "type": "string",
                     "example": "1002003001"
                 },
-                "DocumentType": {
+                "DocumentTypeId": {
                     "type": "string",
                     "example": "CC"
                 },
@@ -1038,75 +1003,20 @@
                     "type": "string",
                     "example": "3001234567"
                 },
+                "RoleId": {
+                    "type": "string",
+                    "example": "CC"
+                },
                 "Surname": {
                     "type": "string",
                     "example": "Pérez"
                 }
             }
         },
-        "models.CreateTechnicianRequest": {
-            "type": "object",
-            "required": [
-                "Address",
-                "Document",
-                "DocumentType",
-                "Email",
-                "EntryDate",
-                "IsActive",
-                "Name",
-                "Password",
-                "PhoneNumber",
-                "Surname",
-                "Username"
-            ],
-            "properties": {
-                "Address": {
-                    "type": "string",
-                    "example": "Calle 123 #45-67"
-                },
-                "Document": {
-                    "type": "string",
-                    "example": "1234567890"
-                },
-                "DocumentType": {
-                    "type": "string",
-                    "example": "CC"
-                },
-                "Email": {
-                    "type": "string",
-                    "example": "carlos.ramirez@example.com"
-                },
-                "EntryDate": {
-                    "type": "string",
-                    "example": "2025-01-01T15:04:05Z"
-                },
-                "IsActive": {
-                    "type": "boolean",
-                    "example": true
-                },
-                "Name": {
-                    "type": "string",
-                    "example": "Carlos"
-                },
-                "Password": {
-                    "type": "string",
-                    "example": "secret123"
-                },
-                "PhoneNumber": {
-                    "type": "string",
-                    "example": "3001234567"
-                },
-                "Surname": {
-                    "type": "string",
-                    "example": "Ramírez"
-                },
-                "Username": {
-                    "type": "string",
-                    "example": "carlos.r"
-                }
-            }
+        "dto.CreateTechnicianDTO": {
+            "type": "object"
         },
-        "models.LoginRequest": {
+        "dto.LoginRequest": {
             "type": "object",
             "properties": {
                 "Password": {
@@ -1119,7 +1029,7 @@
                 }
             }
         },
-        "models.Technician": {
+        "dto.TechnicianDTO": {
             "type": "object",
             "properties": {
                 "Address": {
@@ -1172,7 +1082,7 @@
                 }
             }
         },
-        "models.UpdateClientRequest": {
+        "dto.UpdateClientRequest": {
             "type": "object",
             "properties": {
                 "Address": {
@@ -1183,7 +1093,7 @@
                     "type": "string",
                     "example": "1002003001"
                 },
-                "DocumentType": {
+                "DocumentTypeId": {
                     "type": "string",
                     "example": "CC"
                 },
@@ -1205,7 +1115,7 @@
                 }
             }
         },
-        "models.UpdateTechnicianRequest": {
+        "dto.UpdateTechnicianDTO": {
             "type": "object",
             "properties": {
                 "Address": {
@@ -1216,21 +1126,13 @@
                     "type": "string",
                     "example": "9876543210"
                 },
-                "DocumentType": {
+                "DocumentTypeId": {
                     "type": "string",
                     "example": "CC"
                 },
                 "Email": {
                     "type": "string",
                     "example": "juan.perez@example.com"
-                },
-                "EntryDate": {
-                    "type": "string",
-                    "example": "2025-02-01T10:00:00Z"
-                },
-                "IsActive": {
-                    "type": "boolean",
-                    "example": false
                 },
                 "Name": {
                     "type": "string",
@@ -1239,14 +1141,43 @@
                 "PhoneNumber": {
                     "type": "string",
                     "example": "3017654321"
+                }
+            }
+        },
+        "models.Client": {
+            "type": "object",
+            "properties": {
+                "Address": {
+                    "type": "string",
+                    "example": "Calle 123 #45-67"
+                },
+                "Document": {
+                    "type": "string",
+                    "example": "1002003001"
+                },
+                "DocumentType": {
+                    "type": "string",
+                    "example": "CC"
+                },
+                "Email": {
+                    "type": "string",
+                    "example": "juan.perez@example.com"
+                },
+                "ID": {
+                    "type": "string",
+                    "example": "550e8400-e29b-41d4-a716-446655440000"
+                },
+                "Name": {
+                    "type": "string",
+                    "example": "Juan"
+                },
+                "PhoneNumber": {
+                    "type": "string",
+                    "example": "3001234567"
                 },
                 "Surname": {
                     "type": "string",
                     "example": "Pérez"
-                },
-                "Username": {
-                    "type": "string",
-                    "example": "juan.p"
                 }
             }
         }
